Initial add of nativescript-audio demo code

--- a/nativeDojoApp/platforms/ios/nativeDojoApp/nativeDojoApp-Info.plist
+++ b/nativeDojoApp/platforms/ios/nativeDojoApp/nativeDojoApp-Info.plist
@@ -47,6 +47,8 @@
     <string>UIStatusBarStyleLightContent</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Recording Practice Sessions</string>
     <key>CFBundleIdentifier</key>
     <string>org.nativescript.nativeDojoApp</string>
     <key>CFBundleURLTypes</key>
