--- a/nativeDojoApp/app/App_Resources/iOS/Info.plist
+++ b/nativeDojoApp/app/App_Resources/iOS/Info.plist
@@ -47,5 +47,7 @@
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Recording Practice Sessions</string>
 </dict>
 </plist>
